--- a/ToaGiamMuc.css
+++ b/ToaGiamMuc.css
@@ -114,6 +114,7 @@ body {
 
 #actions {
     display: flex;
+    margin-right: -100px;
 }
 
 .input {
@@ -132,12 +133,12 @@ body {
     color: #6e6e6e;
 }
 
-.btn:hover {
+.btn1:hover {
     background: rgb(63, 63, 63);
     transition: 1s;
 }
 
-.btn {
+.btn1 {
     margin-right: 80px;
     color: #6e6e6e;
     width: 40px;
@@ -154,6 +155,7 @@ body {
     position: relative;
     display: flex;
 }
+
 
 #suggestions {
     color: gray;
